[gd_scene load_steps=5 format=3 uid="uid://chvit1sp7uaoi"]

[ext_resource type="Script" uid="uid://6lw4ptjne2c6" path="res://victory.gd" id="1_vrdfc"]
[ext_resource type="FontFile" uid="uid://by76hbah8nckj" path="res://assets/fonts/VCR_OSD_MONO_1.001.ttf" id="2_mnow5"]
[ext_resource type="Texture2D" uid="uid://bj2g47qs3viwk" path="res://assets/images/sprites/gui_assets/PNG/Main menu/Button BG.png" id="3_qf7ln"]
[ext_resource type="AudioStream" uid="uid://cuwvq1a3sr7xc" path="res://assets/audio/effet_sonore/victory.mp3" id="4_fa3o4"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_vrdfc")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -578.0
offset_top = -300.0
offset_right = -538.0
offset_bottom = -260.0
scale = Vector2(30.4223, 16.208)
color = Color(0, 0, 0, 1)

[node name="WinnerLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -234.5
offset_top = -44.0
offset_right = 234.5
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_mnow5")
theme_override_font_sizes/font_size = 100
text = "Victoire"
horizontal_alignment = 1

[node name="ReplayButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -98.0
offset_top = 80.0
offset_right = 99.0
offset_bottom = 124.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_qf7ln")

[node name="Label" type="Label" parent="ReplayButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.5
offset_top = -13.5
offset_right = 61.5
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_mnow5")
theme_override_font_sizes/font_size = 30
text = "REJOUER"

[node name="VictoryAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_fa3o4")
volume_db = -10.0
